test/simple/ill-typed/tuple_right.caprice
(* TEST
  include refute;
*)


let x : int * bool = 0, 0
